(FiltersTools.py) VerifyExclusiveFilters, to check if a list of ElementFilter is exclusive
(Filters.py) ElementFilter can take a boolean mask to select elements
Better MultiThread  selector for the integrator
Add possibility to control the number of thread in the eigen solver
(BaseOutputObject.py) Add memory usage in debug print

API Changes:
************

All the bridges file are now in a separated folder BasicTools.Bridges for more clarity
BasicTools.Containers.UnstructuredMeshFieldOperations:GetFieldTransferOp ; change of the named argument  elementfilter -> elementFilter
The native Eigen Linear solver uses the available cpu reported by the GetNumberOfAvailableCpus() function
Argument forceUseCpp removed from IntegrationClass.SetIntegrator(self, userIntegrator=None) use BasicTools parameter UseCpp
Tags and Tag classes are now defined on there own file BasicTools.Containers.Tags
MeshBase.GenerateManufacturedOriginalIDs can take an offset to generate OriginalId not starting from zero
now the CheckIntegrity function can return the string "skip" to tell the user the test was intentionally skipped
CreateUniformMeshOfBars behavior change, kno work for lines in the 3D space
the GetCellRepresentation of FEField uses a more generic way to generate cell data
GetFieldTransferOp argument name change elementfilter -> elementFilter
(UnstructuredMeshCreationTools.py) change name Creat0DElementAtEveryPoint to  Create0DElementContainerForEveryPoint and change of behavior please read the documentation
(UnstructuredMeshModificationTools.py) CleanLonelyNodes take a inPlace option, the return values changed
(UnstructuredMeshModificationTools.py) CleanDoubleElements remove unused option preserveOriginalIds
(UnstructuredMeshModificationTools.py) DeleteInternalFaces does not return the input mesh any more
(src/BasicTools/IO/XdmfWriter.py) default HDF5 on XdmfWriter
(XdmfReader.py) now the xdmf reader read all the field automatically (like all the other readers)